updates: added links to buttons in bottom section

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
             <div style="margin: 15px;"><br /></div>
             <div class="row justify-content-center">
               <div style="text-align: center;">
-                  <button type="button" class="btn btn-outline-secondary button extra-margin">Index</button>
+                  <button onclick="location.href = 'https://moehtech.github.io/RCSManualIndex/#/';" type="button" class="btn btn-outline-secondary button extra-margin">Index</button>
                   Look it up in our<br /> index.
               </div>
               <div style="text-align: center;">
-                  <button type="button" class="btn btn-outline-secondary button extra-margin">Contact</button>
+                  <button onclick="location.href = 'https://www.rooferscoffeeshop.com/contact-us';" type="button" class="btn btn-outline-secondary button extra-margin">Contact</button>
                   Ask us a question.
               </div>
             </div>
