updates: added footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Operations Manual</title>
   </head>
   <body class="body">
@@ -16,7 +17,7 @@
       <div class="row justify-content-center">
         <div class="col" style="text-align: center;">
           <div><a href="https://www.rooferscoffeeshop.com"><img src="https://www.rooferscoffeeshop.com/assets/img/Roofers-Coffee-Shop-Logo-R.png"></img></a></div>
-          <div><a href="">How-To Guides</a><a href="https://moehtech.github.io/RCSManualIndex/#/">User Manual</a></div>
+          <div><a href="" class="a-link">How-To Guides</a><a href="https://moehtech.github.io/RCSManualIndex/#/" class="a-link">User Manual</a></div>
           <div><br /></div>
         </div>
       </div>
@@ -92,7 +93,48 @@
           </div>
         </div>
       </div>
+      <div><br /></div>
+      <hr>
+      <div class="row justify-content-center">
+        <div class="col" style="text-align: center;">
+          <div class="col" style="text-align: center;">
+            <div class="footer">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                      <div class="pb-3 footer-social">
+                        <a href="https://www.facebook.com/rooferscoffeeshop" target="_blank" class="d-inline-block mr-3"><i class="fa fa-facebook-square"></i></a>
+                        <a href="https://twitter.com/RoofCoffeeShop" target="_blank" class="d-inline-block mr-3"><i class="fa fa-twitter-square"></i></a>
+                        <a href="https://www.linkedin.com/company/rooferscoffeeshop-com/?trk=company_logo" target="_blank" class="d-inline-block mr-3"><i class="fa fa-linkedin-square"></i></a>
+                        <a href="https://www.instagram.com/rooferscoffeeshop/" target="_blank" class="d-inline-block mr-3 a-instagram"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.pinterest.com/rcscom/" target="_blank" class="d-inline-block mr-3"><i class="fa fa-pinterest-square"></i></a>
+                        <a href="https://www.youtube.com/channel/UCAQTC5U3FL9M-_wcRiEEyvw" target="_blank" class="d-inline-block mr-3"><i class="fa fa-youtube-square"></i></a>
+                        <a href="/rss" target="_blank" class="d-inline-block mr-3"><i class="fa fa-rss-square"></i></a>
+                      </div>
+                      <div>
+                          <a href="/privacy" class="d-inline-block mr-3">Terms – Privacy Policy</a>
+                          <a href="/contact-us" class="d-inline-block mr-3">Contact</a>
+                          <a href="/add-us" class="d-inline-block mr-3">Support</a>
+                          <a href="/advertise-on-rcs" class="d-inline-block mr-3">Advertise</a>
+                          <a href="/about-us" class="d-inline-block mr-3">About Us</a>
+                      </div>
+                  </div>
+                  <div class="col-md-6 footer-logo">
+                    <div class="float-right">
+                      <a href="/" title="Roofers Coffee Shop - Where The Industry Meets!">
+                        <img alt="Roofers Coffee Shop - Where The Industry Meets!" title="Roofers Coffee Shop - Where The Industry Meets!" style="width: 350px; max-width: 100%;" src="https://www.rooferscoffeeshop.com/assets/img/Roofers-Coffee-Shop-Logo-R.png" loading="lazy">
+                      </a>
+                      <br>
+                      <center>© 2021 RoofersCoffeeShop.com</center>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    
+
   </body>
 </html>
